BE Add /contacts/importFile endpoint
